5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1635_2703.log
== TEST (2019-04-08 14:25:10) 
-- CODE:
a = float(input("Idade: "))

if(a>18)
-- ERROR:
File "XXXX", line 3
    if(a>18)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:26:16) 
-- CODE:
a = float(input("Idade: "))

if(a>18):
	print("eleitor")
else:
	print("nao_eleitor")
	

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:26:23) 
-- CODE:
a = float(input("Idade: "))

if(a>18):
	print("eleitor")
else:
	print("nao_eleitor")
	

-- EXECUTION TIME:
0.189583
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
